--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doctors & Drummers</title>
-  <!-- Link to Bootstrap CSS -->
   <link href="static/css/main.css" rel="stylesheet">
   <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
 </head>
@@ -41,7 +40,9 @@
       </div>
       <div class="col-md-12">
         <h2>Kommande evenemang 🎉</h2>
-        <img src="static/img/event_1.jpg" alt="Gallery Image">
+        <a href="static/img/event_1.jpg" target="blank" style="text-decoration: none">
+          <img src="static/img/event_1.jpg" style="max-width: 95%" alt="Event Image">
+        </a>
       </div>
       <div class="col-md-12">
         <h2>Kontakta oss ☎️📮</h2>
@@ -56,38 +57,84 @@
   <div class="gallery">
     <h1>Photo Gallery</h1>
     <div class="row">
+      <div class="gallery">
       <!-- Images in the img folder -->
-      <div class="gallery img">
-          <img src="static/img/camera_1_1.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_2.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_3.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_4.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_5.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_6.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_7.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_8.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_9.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_10.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_11.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_12.jpg" alt="Gallery Image">
-          <img src="static/img/camera_1_13.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_1.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_2.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_3.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_4.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_5.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_6.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_7.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_8.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_9.jpg" alt="Gallery Image">
-          <img src="static/img/camera_2_10.jpg" alt="Gallery Image">
-          <img src="static/img/background_2.jpg" alt="Gallery Image">
+      <div class="gallery img zoomable">
+          <a href="static/img/camera_1_1.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_1.jpg" alt="Gallery Image" >
+          </a>
+          <a href="static/img/camera_1_2.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_2.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_3.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_3.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_4.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_4.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_5.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_5.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_6.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_6.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_7.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_7.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_8.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_8.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_9.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_9.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_10.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_10.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_11.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_11.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_12.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_12.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_1_13.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_1_13.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_1.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_1.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_2.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_2.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_3.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_3.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_4.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_4.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_5.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_5.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_6.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_6.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_7.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_7.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_8.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_8.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_9.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_9.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/camera_2_10.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/camera_2_10.jpg" alt="Gallery Image">
+          </a>
+          <a href="static/img/background_2.jpg" target="blank" style="text-decoration: none">
+            <img src="static/img/background_2.jpg" alt="Gallery Image">
+          </a>
       </div>
     </div>
   </div>
-
-  <!-- Bootstrap JS (optional but recommended for interactivity) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
