--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
   <div class="container">
     <div class="d-flex align-content-sm-center border border-primary">
       <div class="col-md-12">
-        <h2>Tjenamors! 😎</h2>
-        <p>Vi är en passionerad musikgrupp som blandar genrer från rock till jazz. Vårt uppdrag är att spela covers som engagerar alla på en fest eller en pub. 
-          Att få folk att resa sig upp och dansa! Vi har också en mer avslappnad låtlista för lugnare tillställningar.
-          Vi är här för att göra ditt event oförglömligt! Oavsett om det är ett bröllop, privat fest eller en speciell högtid.
+        <h2>Hejsan! 😎</h2>
+        <p>Vi är en passionerad musikgrupp som blandar genrer från rock till jazz. Vårt uppdrag är att spela covers som engagerar alla på olika evenemang, att få folk 
+          att resa sig upp och dansa och sjunga med till musiken helt enkelt! Vi är här för att göra ditt event oförglömligt! Oavsett om det är ett bröllop, privat fest eller annan tillställning.
           Vi håller till i Göteborg.</p>
       </div>
       <div class="col-md-12">
