fix: new menu + new sites

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doctors & Drummers</title>
+  <link href="static/css/normalize.css" rel="stylesheet">
   <link href="static/css/main.css" rel="stylesheet">
   <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
 </head>
@@ -14,126 +15,49 @@
 <body>
 
   <!-- Header Section -->
-  <header class="header">
+
+  <header class="header header-image">
     <h1>Doctors & Drummers</h1>
+  </header>
+
+  <p></p>
+  <header class="menu">
+    <nav>
+      <button class="menu-btn" onclick="window.location.href='index.html'">Hem</button>
+      <button class="menu-btn" onclick="window.location.href='booking.html'">Boka</button>
+      <button class="menu-btn" onclick="window.location.href='about.html'">Om</button>
+      <button class="menu-btn" onclick="window.location.href='events.html'">Evenemang</button>
+    </nav>
   </header>
   <h3></h3>
   <!-- Middle Content Section -->
   <div class="container">
     <div class="d-flex align-content-sm-center border border-primary">
       <div class="col-md-12">
-        <h2>Hejsan! 😎</h2>
-        <p>Vi är en passionerad musikgrupp som blandar genrer från rock till jazz. Vårt uppdrag är att spela covers som engagerar alla på olika evenemang, att få folk 
-          att resa sig upp och dansa och sjunga med till musiken helt enkelt! Vi är här för att göra ditt event oförglömligt! Oavsett om det är ett bröllop, privat fest eller annan tillställning.
-          Vi håller till i Göteborg.</p>
+        <h2>Hejsan! 🎸</h2>
+        <p>Vi är ett coverband i Göteborg som spelar skön partymusik från 70-talet och framåt - allt från R'n'B och soul till svensk pop och gladpunk. Boka oss för en lyckad fest eller svängigt event!</p>
       </div>
       <div class="col-md-12">
-        <h2>Vad vi erbjuder 🤔🥳</h2>
-        <p>Från avslappnade publikfavoriter till låtar som får dig att rocka loss, våra låtlistor är flexibla och har allt. Älskar du en specifik låt? Hör av dig till oss!</p>
+        <h3>Vad vi erbjuder</h3>
+        <p>Våra låtlistor är flexibla och har allt (nästan). Älskar du en specifik låt? Hör av dig till oss!</p>
       </div>
       <div class="col-md-12">
-        <h2>Få ett smakprov!🎵</h2>
-        <a href="https://youtube.com/@doctorsdrummers-v9f?si=CqoLsDE5ShiCCPgE" target="_blank" style="color: lightblue">Kolla in vår Youtube!</a>
-        <p></p>
-        <a href="https://facebook.com/profile.php?id=61568214749362" target="_blank" style="color: lightblue">Kolla in vår Facebook!</a>
-      </div>
-      <div class="col-md-12">
-        <h2>Kommande evenemang 🎉</h2>
-        <a href="static/img/event_1.jpg" target="blank" style="text-decoration: none">
-          <img src="static/img/event_1.jpg" style="max-width: 95%" alt="Event Image">
-        </a>
-      </div>
-      <div class="col-md-12">
-        <h2>Kontakta oss ☎️📮</h2>
-        <p>Du kan hitta våra kontaktuppgifter på:</p>
-        <a href="https://facebook.com/profile.php?id=61568214749362" target="_blank" style="color: lightblue">Facebook</a>
-        <p></p>
+        <iframe src="https://www.youtube.com/embed/FFcG9zrz6lY?si=Avl1HpJRCRdMPmGm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/7h2ZwxKAEvA?si=AN_0JG6NM2oXu6rG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/WOC8BKSDJt0?si=TLzOWQp-vUyrbUS3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/r9bgETdO1BQ?si=GDu8ia0wKPYNtR6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </div>
   <p></p>
-  <!-- Gallery Section -->
-  <div class="gallery">
-    <h1>Photo Gallery</h1>
-    <div class="row">
-      <div class="gallery">
-      <!-- Images in the img folder -->
-      <div class="gallery img zoomable">
-          <a href="static/img/camera_1_1.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_1.jpg" alt="Gallery Image" >
-          </a>
-          <a href="static/img/camera_1_2.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_2.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_3.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_3.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_4.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_4.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_5.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_5.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_6.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_6.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_7.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_7.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_8.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_8.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_9.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_9.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_10.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_10.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_11.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_11.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_12.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_12.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_1_13.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_1_13.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_1.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_1.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_2.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_2.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_3.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_3.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_4.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_4.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_5.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_5.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_6.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_6.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_7.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_7.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_8.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_8.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_9.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_9.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/camera_2_10.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/camera_2_10.jpg" alt="Gallery Image">
-          </a>
-          <a href="static/img/background_2.jpg" target="blank" style="text-decoration: none">
-            <img src="static/img/background_2.jpg" alt="Gallery Image">
-          </a>
-      </div>
-    </div>
-  </div>
+  <footer class="footer">
+    <p>Kontakta oss via: 
+      <p></p>
+      <a class="contact-button" href="mailto:jhtobias@me.com">jhtobias@me.com</a> 
+      <p></p>
+      <a class="contact-button"  href="tel:+46707-75 51 62">+46707-75 51 62</a>
+    </p>
+  </footer>
 
 </body>
 </html>
