--- a/events.html
+++ b/events.html
@@ -27,7 +27,6 @@
       <button class="menu-btn" onclick="window.location.href='index.html'">Hem</button>
       <button class="menu-btn" onclick="window.location.href='booking.html'">Boka</button>
       <button class="menu-btn" onclick="window.location.href='about.html'">Om</button>
-      <button class="menu-btn" onclick="window.location.href='events.html'">Evenemang</button>
     </nav>
   </header>
   <h3></h3>
@@ -35,6 +34,8 @@
   <div class="container">
     <div class="col-md-12">
         <h2>Kommande evenemang 🎉</h2>
+        <p>Inget just nu, boka oss under "Boka" i menyn!</p>
+        <h2>Tidigare evenemang 🎉</h2>
         <a href="static/img/event_1.jpg" target="blank" style="text-decoration: none">
             <img src="static/img/event_1.jpg" style="max-width: 95%" alt="Event Image">
         </a>
